; ModuleID = '/home/carl/AnghaBench/curl/lib/extr_conncache.c_bundle_add_conn.c'
source_filename = "/home/carl/AnghaBench/curl/lib/extr_conncache.c_bundle_add_conn.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.connectbundle = type { i32, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }
%struct.connectdata = type { %struct.connectbundle*, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.connectbundle*, %struct.connectdata*)* @bundle_add_conn to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @bundle_add_conn(%struct.connectbundle* %0, %struct.connectdata* %1) #0 {
  %3 = alloca %struct.connectbundle*, align 8
  %4 = alloca %struct.connectdata*, align 8
  store %struct.connectbundle* %0, %struct.connectbundle** %3, align 8
  store %struct.connectdata* %1, %struct.connectdata** %4, align 8
  %5 = load %struct.connectbundle*, %struct.connectbundle** %3, align 8
  %6 = getelementptr inbounds %struct.connectbundle, %struct.connectbundle* %5, i32 0, i32 1
  %7 = load %struct.connectbundle*, %struct.connectbundle** %3, align 8
  %8 = getelementptr inbounds %struct.connectbundle, %struct.connectbundle* %7, i32 0, i32 1
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = load %struct.connectdata*, %struct.connectdata** %4, align 8
  %12 = load %struct.connectdata*, %struct.connectdata** %4, align 8
  %13 = getelementptr inbounds %struct.connectdata, %struct.connectdata* %12, i32 0, i32 1
  %14 = call i32 @Curl_llist_insert_next(%struct.TYPE_2__* %6, i32 %10, %struct.connectdata* %11, i32* %13)
  %15 = load %struct.connectbundle*, %struct.connectbundle** %3, align 8
  %16 = load %struct.connectdata*, %struct.connectdata** %4, align 8
  %17 = getelementptr inbounds %struct.connectdata, %struct.connectdata* %16, i32 0, i32 0
  store %struct.connectbundle* %15, %struct.connectbundle** %17, align 8
  %18 = load %struct.connectbundle*, %struct.connectbundle** %3, align 8
  %19 = getelementptr inbounds %struct.connectbundle, %struct.connectbundle* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = add nsw i32 %20, 1
  store i32 %21, i32* %19, align 4
  ret void
}

declare dso_local i32 @Curl_llist_insert_next(%struct.TYPE_2__*, i32, %struct.connectdata*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
